Support Raspberry Pi 4
Signed-off-by: gtossk2 <gtossk2@hotmail.com>

--- a/meta-raspberrypi/conf/machine/raspberrypi4.conf
+++ b/meta-raspberrypi/conf/machine/raspberrypi4.conf
@@ -19,3 +19,13 @@ SERIAL_CONSOLES ?= "115200;ttyS0"
 
 VC4DTBO ?= "vc4-kms-v3d"
 ARMSTUB ?= "armstub7.bin"
+
+IMAGE_INSTALL:append = " minicom"
+
+# RPI_USE_U_BOOT = "3"
+ENABLE_UART = "1"
+
+FLASH_SIZE = "131072"
+FLASH_KERNEL_OFFSET-131072 = "1024"
+FLASH_ROFS_OFFSET_flash-131072 = "11264"
+
