--- a/meta-evb/meta-evb-raspberrypi/conf/local.conf.sample
+++ b/meta-evb/meta-evb-raspberrypi/conf/local.conf.sample
@@ -1,4 +1,4 @@
-MACHINE ??= "raspberrypi"
+MACHINE ??= "raspberrypi4"
 DISTRO ?= "openbmc-phosphor"
 PACKAGE_CLASSES ?= "package_ipk"
 SANITY_TESTED_DISTROS:append ?= " *"
@@ -21,3 +21,11 @@ CONF_VERSION = "2"
 
 require conf/machine/include/obmc-bsp-common.inc
 require conf/machine/include/obmc-evb-common.inc
+
+GPU_MEM = "128"
+DISTRO_FEATURES:append = "systemd"
+VIRTUAL-RUNTIME_init_manager = "systemd"
+DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
+VIRTUAL-RUNTIME_initscripts = ""
+IMAGE_FSTYPES += " rpi-sdimg"
+
